fix:  scrollbar on left sidebar 左边栏滚动条
Show scrollbar for overflowing content on left sidebar.
窗口高度不足时左边栏显示滚动条

--- a/source/css/_partial/main.styl
+++ b/source/css/_partial/main.styl
@@ -42,7 +42,7 @@
         opacity:1;
         transition:all .2s ease-in;
         height:100%;
-
+        overflow-y: auto;
         .overlay{
             width: 100%;
             height: 180px;
@@ -171,7 +171,7 @@
         position: relative;
         width: 100%;
         overflow: hidden;
-        min-height: 500px;
+        min-height: 260px;
         font-size: 14px;
         .switch-wrap{
             transition: transform .3s ease-in;
